--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
     "react-toastify": "^10.0.6",
+    "slugify": "^1.6.6",
     "yup": "^1.4.0"
   },
   "devDependencies": {
